--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -100,7 +100,7 @@
   --ion-color-moradillo-tint: #8246f3;
 
   /** moradilloclaro**/
-  --ion-color-moradilloclaro: #ad95db;
+  --ion-color-moradilloclaro: #a885e9;
   --ion-color-moradilloclaro-rgb: 173,149,219;
   --ion-color-moradilloclaro-contrast: #000000;
   --ion-color-moradilloclaro-contrast-rgb: 0,0,0;
