--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,27 +1,26 @@
 <ion-header [translucent]="true">
   <ion-toolbar color="moradilloclaro"> 
     <ion-title>
-      ¡Hola Mundo!
+      <p class="bienvenido">¡Bienvenid@!</p>
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-card>
   <ion-card-header>
-    <ion-card-subtitle>Bienvenid@</ion-card-subtitle>
-    <ion-card-title>Ingresa tu cuenta</ion-card-title>
+    <ion-card-title class="titulo">Iniciar sesión</ion-card-title>
+    <ion-card-subtitle>Ingrese sus datos a continuación:</ion-card-subtitle>
   </ion-card-header>
 
   <ion-card-content>
-    <div class="ion-text-center"><h3>Iniciar sesión</h3></div>
     <form [formGroup]="formularioLogin">
       <ion-item>
-        <ion-label position="floating">Nombre de usuario:</ion-label>
-        <ion-input placeholder="Ej: Harry Styles" formControlName="nombre"></ion-input>
+        <ion-icon name="person-sharp"></ion-icon>
+        <ion-input placeholder="Nombre de usuario:" formControlName="nombre"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-label position="floating">Contraseña:</ion-label>
-        <ion-input type="password" formControlName="password"></ion-input>
+        <ion-icon name="lock-closed-sharp"></ion-icon>
+        <ion-input type="password" placeholder="Contraseña:" formControlName="password"></ion-input>
       </ion-item>
     </form>
     <br><br>
@@ -33,11 +32,9 @@
 <br>
 <ion-footer>
   <ion-toolbar>
-    <i-buttons slot="end">
-      <ion-button [routerLink]= "['/registro']" color="moradillo">
-        ¿No tienes cuenta? Registarte aquí
-      </ion-button>
-    </i-buttons>
+    <ion-button slot="end" [routerLink]= "['/registro']" color="moradillo">
+      ¿No tienes cuenta? Registarte aquí
+    </ion-button>
   </ion-toolbar>
 </ion-footer>
 
