--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,34 +1,25 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
-
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
-}
 ion-toolbar{
   background-color: var(--ion-color-moradilloclaro);
-  
 }
 ion-button {
   background-color: var(--ion-color-moradillo);
+}
+
+.titulo{
+  text-align: center;
+  font-size: 30px;
+}
+
+.bienvenido {
+  color: rgb(250, 248, 248);
+  text-align: center;
+}
+
+ion-card-subtitle {
+  padding-top: 20px;
+  text-align: center;
+}
+
+ion-icon {
+  padding-right: 10px;
 }
