--- a/src/app/registro/registro.page.scss
+++ b/src/app/registro/registro.page.scss
@@ -1,6 +1,25 @@
 ion-toolbar {
-    background-color: var(--ion-color-naranjillo);
+    background-color : var(--ion-color-naranjilloclaro);
 }
 ion-button{
-    background-color : var(--ion-color-naranjilloclaro);
+    background-color: var(--ion-color-naranjillo);
+}
+
+.bienvenido {
+    color: rgb(250, 248, 248);
+    text-align: center;
+}
+
+.titulo{
+    text-align: center;
+    font-size: 30px;
+}
+
+ion-card-subtitle {
+    padding-top: 15px;
+    text-align: center;
+}
+
+ion-icon {
+    padding-right: 10px;
 }
