--- a/src/app/comments/comments.page.html
+++ b/src/app/comments/comments.page.html
@@ -5,5 +5,17 @@
 </ion-header>
 
 <ion-content>
-
+  <div *ngIf="comments.length > 0">
+    <ion-list>
+      <div *ngFor="let buscar of comments">
+        <ion-item>
+          <ion-label>
+            {{buscar.id}}
+            {{buscar.name}}
+            {{buscar.body}}
+          </ion-label>
+        </ion-item>
+      </div>
+    </ion-list>
+  </div>
 </ion-content>
