--- a/src/app/comments/comments.page.html
+++ b/src/app/comments/comments.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>comments</ion-title>
+    <ion-title>Comentarios</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -19,3 +19,11 @@
     </ion-list>
   </div>
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-button slot="end" [routerLink]= "['/posts']">
+      Volver
+    </ion-button>
+  </ion-toolbar>
+</ion-footer>
