--- a/src/app/posts/posts.page.html
+++ b/src/app/posts/posts.page.html
@@ -7,12 +7,18 @@
 <ion-content>
   <div *ngIf="posts.length > 0">
     <ion-list>
-      <div *ngFor="let buscar of posts" [routerLink]="['/',buscar.id]">
+      <div *ngFor="let buscar of posts" [routerLink]="['/', buscar.id]">
         <ion-item>
-          <ion-label>
-            <h1>{{buscar.title}}</h1>
-            <p>{{buscar.body}}</p>
-          </ion-label>
+          <div class="container">
+            <p class="encabezado">
+              <img class="icon" src="https://cdn-icons-png.flaticon.com/512/1198/1198343.png" alt="" width="13%" height="100%">
+              <strong>Publicación {{buscar.id}}:</strong> {{buscar.title}}
+            </p>
+            <img class="imgPost" src="https://pixabay.com/get/gacb6c62a934a0f0c190cb53ea0ec58981da30b660a085d1070aafecaf10bb8a815a88133c88a1b114e938a86f4f9e5ece4344efa80c1003400b2a79b247499d5419cba9f3f48bbbe43115d90831cbc62_1920.jpg" alt=""
+            height="200px" width="100%">
+            <p class="descripcion"><strong>Descripción:</strong> {{buscar.body}}
+            </p>
+          </div>
         </ion-item>
       </div>
     </ion-list>
@@ -21,6 +27,6 @@
 
 <div>
   <ion-button>
-    <div (click)="logout()">salir</div>
+    <div (click)="logout()">Cerrar Sesión</div>
   </ion-button>
 </div>
