--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,25 +1,148 @@
-ion-toolbar{
-  background-color: var(--ion-color-moradilloclaro);
-}
-ion-button {
-  background-color: var(--ion-color-moradillo);
+ion-content {
+  --background: linear-gradient(-20deg,rgba(255, 255, 255, 0.801), rgba(0,0,0,0.1)),
+  url("https://i.ibb.co/XpPc412/Fondo.jpg") no-repeat center;
 }
 
-.titulo{
-  text-align: center;
-  font-size: 30px;
+.login-section {
+  height: 80%;
+  width: 100%;
+  max-width: 500px;
+  background: #fff;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  position: fixed;
+  margin: auto;
+  border-top-left-radius: 55px;
+  border-top-right-radius: 55px;
+
+  .action-buttons {
+      text-align: center;
+      .login-button {
+          text-align: center;
+      }
+      .signup-button {
+          text-align: center;
+          margin-top: 25px;
+      }
+      .forgot {
+          margin-top: 25px;
+      }
+  }
+
+  .heading {
+      margin-top: -30px;
+      h1 {
+          font-size: 1.6rem;
+          font-weight: bolder;
+          text-align: center;
+      }
+      p {
+          margin-top: 20px;
+          text-align: center;
+          color: #7b7b7b;
+      }
+  }
+  .login-form {
+      margin-top: -50px;
+      .form-input {
+          position: relative;
+          ion-item::part(native){
+              padding-left: 0;
+          }
+          ion-icon {
+              position: absolute;
+              top: 37px;
+              z-index: 2;
+              font-size: 1.2rem;
+              left: 5px;
+          }
+          ion-label {
+              position: absolute;
+              margin-left: 35px;
+              font-weight: bolder;
+              color: #7b7b7b;
+              font-size: 0.8rem;
+              top: 15px;
+          }
+
+          ion-input {
+              font-size: 0.9rem;
+              --padding-start: 36px;
+              --padding-top: 36px;
+          }
+      }
+  }
 }
 
-.bienvenido {
-  color: rgb(250, 248, 248);
-  text-align: center;
+@media (min-width: 320px) {
+  .login-section {
+      height: 85%;
+      width: 100%;
+      max-width: 600px;
+  }
 }
 
-ion-card-subtitle {
-  padding-top: 20px;
-  text-align: center;
+@media (min-width: 400px) {
+  .login-section {
+      height: 80%;
+      width: 100%;
+      max-width: 600px;
+  }
+
+  .login-form {
+      padding-top: 50px;
+  }
+
+  .action-buttons {
+      padding-top: 50px;
+  }
+
+  .signup-button {
+      padding-top: 10px;
+  }
 }
 
-ion-icon {
-  padding-right: 10px;
+@media (min-width: 768px) {
+  .login-section {
+      height: 70%;
+      width: 100%;
+      max-width: 800px;
+  }
+
+  .login-form {
+      padding-top: 50px;
+  }
+
+  .action-buttons {
+      padding-top: 50px;
+  }
+
+  .signup-button {
+      padding-top: 10px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .login-section {
+      height: 83%;
+      width: 80%;
+      max-width: 1024px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .login-section {
+      height: 70%;
+      width: 80%;
+      max-width: 1280px;
+  }
+}
+
+@media (min-height: 1366px) {
+  .login-section {
+      height: 65%;
+      width: 80%;
+      max-width: 1280px;
+  }
 }
