--- a/src/app/registro/registro.page.html
+++ b/src/app/registro/registro.page.html
@@ -1,48 +1,23 @@
-<ion-header [translucent]="true">
-  <ion-toolbar color="naranjillo"> 
-    <ion-title>
-      <p class="bienvenido">Registro</p>
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-
-<ion-card>
-  <ion-card-header>
-    <ion-card-title class="titulo">Crea tu cuenta</ion-card-title>
-    <ion-card-subtitle>Ingresa un nombre de usuario y una contraseña</ion-card-subtitle>
-  </ion-card-header>
-  <ion-card-content>
-    <form [formGroup]="formularioRegistro" (keyup.enter)="guardar()">
-      <ion-item>
-        <ion-icon name="person-sharp"></ion-icon>
-        <ion-input placeholder="Nombre de usuario:" formControlName="nombre"></ion-input>
-      </ion-item>
-      <ion-item>
-        <ion-icon name="mail"></ion-icon>
-        <ion-input placeholder="Correo Electrónico:" formControlName="email"></ion-input>
-      </ion-item>
-      <ion-item>
-        <ion-icon name="lock-closed-sharp"></ion-icon>
-        <ion-input type="password" placeholder="Contraseña:" formControlName="password"></ion-input>
-      </ion-item>
-      <ion-item>
-        <ion-icon name="lock-closed-sharp"></ion-icon>
-        <ion-input type="password" placeholder="Confirmar contraseña:" formControlName="confirmacionPassword"></ion-input>
-      </ion-item>
-      
-      <br>
-      <ion-button (click)="guardar()" color="naranjilloclaro">
-        Registrarse
-      </ion-button>
-    </form>
-  </ion-card-content>
-</ion-card>
-
-<ion-footer>
-  <ion-toolbar>
-    <ion-button slot="end" [routerLink]= "['/home']" color="naranjillo">
-      ¿Ya tienes una cuenta? Ingresa aquí
-    </ion-button>
-  </ion-toolbar>
-</ion-footer>
+<ion-content>
+  <div class="signup-section ion-padding">
+    <div class="heading ion-padding">
+      <h2>¡Bienvenido al registro!</h2>
+      <p>Ingrese sus credenciales para registrarse</p>
+    </div>
+    <div class="signup-form ion-padding">
+      <div class="form-input">
+        <ion-icon name="person-outline"></ion-icon>
+        <ion-item>
+          <ion-label position="floating">Usuario</ion-label>
+          <ion-input type="user" #nombre></ion-input>
+        </ion-item>
+      </div>
+      <p class="mensajePass">* Su contraseña por defecto es: "1234".</p>
+    </div>
+    <div class="action-buttons ion-padding">
+      <ion-button class="signup-button" (click)="registro(nombre)" size="block"><ion-text>Registarse</ion-text></ion-button>
+      <p>¿Ya tienes una cuenta?</p>
+      <ion-button size="default" color="success" class="login-button" routerLink="/home">Inicia Sesión</ion-button>
+    </div>
+  </div>
+</ion-content>
