--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -77,7 +77,7 @@ ion-content {
 
 @media (min-width: 320px) {
   .login-section {
-      height: 85%;
+      height: 80%;
       width: 100%;
       max-width: 600px;
   }
@@ -105,8 +105,8 @@ ion-content {
 
 @media (min-width: 768px) {
   .login-section {
-      height: 70%;
-      width: 100%;
+      height: 80%;
+      width: 80%;
       max-width: 800px;
   }
 
@@ -123,26 +123,17 @@ ion-content {
   }
 }
 
-@media (min-width: 1024px) {
+
+@media (min-width: 700px) {
   .login-section {
-      height: 83%;
+      height: 75%;
       width: 80%;
-      max-width: 1024px;
   }
 }
 
-@media (min-width: 1280px) {
-  .login-section {
-      height: 70%;
-      width: 80%;
-      max-width: 1280px;
-  }
-}
-
-@media (min-height: 1366px) {
-  .login-section {
-      height: 65%;
-      width: 80%;
-      max-width: 1280px;
-  }
+@media (min-width: 375px) and (max-width: 600px) {
+    .login-section {
+        height: 75%;
+        width: 100%;
+    }
 }
