--- a/src/app/comments/comments.page.scss
+++ b/src/app/comments/comments.page.scss
@@ -16,6 +16,14 @@ ion-toolbar {
     padding-bottom: 10px;
 }
 
+.encabezado {
+    font-size: 15px;
+}
+
+.descripcion {
+    font-size: 14px;
+}
+
 @media (min-width: 632px) and (max-width: 800px) {
 
     .container2 {
